src/objects/CheckBox_Picklist_Correlation__c.object
<CustomObject>
    <fields>
        <fullName>Field_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Mapping</label>
        <referenceTo>Field_Mapping__c</referenceTo>
        <relationshipLabel>CheckBox-Picklist Correlations</relationshipLabel>
        <relationshipName>CheckBox_Picklist_Correlations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Field_API_Name__c</fullName>
        <label>Source Field API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Value__c</fullName>
        <label>Source Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field_API_Name__c</fullName>
        <label>Target Field API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Value__c</fullName>
        <label>Target Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>CheckBox-Picklist Correlation</label>
    <nameField>
        <displayFormat>CH-PCK-{0000}</displayFormat>
        <label>CheckBox-Picklist Values Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CheckBox-Picklist Correlations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>